# salmalm

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DEPRECATIONS.md  Dockerfile  FREEZE.md  LICENSE  README.md  README_EN.md  README_KR.md  REDDIT_POST.md  RELEASE_NOTES.md  SECURITY.md  TODO_REFACTOR.md  _patch_engine.py  _patch_web.py  _patch_web2.py  audit.db-shm  audit.db-wal  coverage.json  docker-compose.dev.yml  docker-compose.yml  fix_lint.py  gen_api.py  index.html  mkdocs.yml  promo_dc_oauth.md  promo_dc_singularity.md  pyproject.toml  salmalm_launcher.py  server.py  setup.py  setup_wizard.py  sitemap.xml  start.sh  (+1 more)
.agent/: rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  test.yml
FAQ/: index.html
FAQ_EN/: index.html
_classifier_pkg_task1_skip/: __init__.py  intent.py  keywords.py  tokens.py
_llm_pkg_task2_skip/: __init__.py  anthropic.py  common.py  google.py  ollama.py  openai.py
api/: index.html
api/channels/: index.html
api/core/: index.html
api/features/: index.html
api/security/: index.html
api/tools/: index.html
api/utils/: index.html
api/web/: index.html
architecture/: index.html
beginners-guide/: index.html
certs/: server.crt  server.key
changelog/: index.html
commands/: index.html
configuration/: index.html
deployment/: index.html
docs/: FAQ.md  FAQ_EN.md  api.md  architecture.md  beginners-guide.md  changelog.md  commands.md  configuration.md  deployment.md  getting-started.md  index.md  mcp.md  token-optimization-gap.md  tools.md  use-cases.md  use-cases_EN.md
docs/api/: channels.md  core.md  features.md  generated.md  index.md  security.md  tools.md  utils.md  web.md
docs/features/: channels.md  index.md  mcp.md  multi-model.md  personal.md  rag.md  security.md  self-evolve.md  sessions.md  sla.md  thinking.md
exports/: export_cmd-test-html_20260220_055025.html  export_cmd-test-html_20260220_060240.html  export_cmd-test-html_20260220_060308.html  export_cmd-test-html_20260220_061321.html  export_cmd-test-html_20260220_113546.html  export_cmd-test-html_20260220_181402.html  export_cmd-test-html_20260220_184919.html  export_cmd-test-html_20260220_185155.html  export_cmd-test-html_20260220_232304.html  export_cmd-test-json_20260220_055025.json  export_cmd-test-json_20260220_060240.json  export_cmd-test-json_20260220_060308.json  export_cmd-test-json_20260220_061321.json  export_cmd-test-json_20260220_113546.json  export_cmd-test-json_20260220_181402.json  export_cmd-test-json_20260220_184919.json  export_cmd-test-json_20260220_185155.json  export_cmd-test-json_20260220_232304.json  export_cmd-test_20260220_055025.md  export_cmd-test_20260220_060240.md  export_cmd-test_20260220_060308.md  export_cmd-test_20260220_061321.md  export_cmd-test_20260220_113546.md  export_cmd-test_20260220_181402.md  export_cmd-test_20260220_184919.md  export_cmd-test_20260220_185155.md  export_cmd-test_20260220_232304.md  export_eng_export_20260220_055032.md  export_eng_export_20260220_055048.md  export_eng_export_20260220_055411.md  export_eng_export_20260220_055755.md  export_eng_export_20260220_060040.md  export_eng_export_20260220_060106.md  export_eng_export_20260220_061213.md  export_eng_export_20260220_061248.md  export_eng_export_20260220_113809.md  export_eng_export_20260220_181157.md  export_eng_export_20260220_184720.md  export_eng_export_20260220_185101.md  export_eng_export_20260220_232212.md
features/: index.html
features/channels/: index.html
features/mcp/: index.html
features/multi-model/: index.html
features/personal/: index.html
features/rag/: index.html
features/security/: index.html
features/self-evolve/: index.html
features/sessions/: index.html
features/sla/: index.html
features/thinking/: index.html
getting-started/: index.html
mcp/: index.html
salmalm/: __init__.py  __main__.py  a2a.py  agents.py  async_http.py  auth.py  bootstrap.py  briefing.py  browser.py  channel_router.py  chunker.py  cli.py  commands.py  config_manager.py  constants.py  container.py  core.py  crypto.py  dashboard_life.py  deadman.py  dedup.py  discord_bot.py  docs.py  doctor.py  edge_cases.py  engine.py  exec_approvals.py  file_logger.py  heartbeat.py  hooks.py  llm.py  llm_loop.py  llm_task.py  logging_ext.py  markdown_ir.py  mcp.py  mcp_marketplace.py  memory.py  migration.py  mood.py  (+55 more)
salmalm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
salmalm/backend/: README.md
salmalm/channels/: __init__.py  channel_router.py  discord_bot.py  slack_bot.py  telegram.py  telegram_commands.py  telegram_media.py
salmalm/config/: __init__.py  limits.py  models.py  paths.py  salmalm.nginx.conf
salmalm/core/: __init__.py  audit.py  classifier.py  compaction.py  core.py  core_messages.py  cost.py  engine.py  engine_pipeline.py  error_messages.py  error_recovery.py  exceptions.py  export.py  health.py  image_resize.py  (+21 more)
scripts/: build_exe.sh  bump_version.py  bundle_js.py  install.sh  launcher.py  publish_prod.sh  publish_test.sh  save_keyring.sh  split_app_js.py  test_install.sh
search/: search_index.json
site/: index.html  sitemap.xml
tests/: README.md  conftest.py  test_a2a.py  test_abuse_guard.py  test_all.py  test_api.py  test_apply_patch.py  test_artifacts.py  test_async_http.py  test_auth.py  test_brave.py  test_browser.py  test_channel_router.py  test_circuit_breaker.py  test_commands_extended.py  test_compaction_v2.py  test_config_manager.py  test_config_migration.py  test_coverage.py  test_coverage2.py  test_coverage3.py  test_coverage4.py  test_coverage5.py  test_coverage6.py  test_coverage_boost.py  test_coverage_web_cron.py  test_crypto.py  test_dashboard_life.py  test_deadman.py  test_dedupe_debounce.py  test_discord.py  test_doctor.py  test_e2e.py  test_e2e2.py  test_e2e_b.py  test_e2e_browser.py  test_e2e_pipeline.py  test_edge_cases.py  test_error_recovery.py  test_exec_advanced.py  (+57 more)
tools/: index.html
use-cases/: index.html
use-cases_EN/: index.html
(+289 files in other folders)
