[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salmalm"
version = "0.8.8"
description = "Personal AI Gateway — Pure Python, minimal dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Nightmare Dolsoe", email = "dolsoe@salmalm.dev"}]
keywords = ["ai", "gateway", "llm", "agent", "local", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
dev = ["mypy>=1.8", "pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
salmalm = "salmalm.__main__:main"

[project.urls]
Homepage = "https://github.com/hyunjun6928-netizen/salmalm"
Repository = "https://github.com/hyunjun6928-netizen/salmalm"

[tool.setuptools.packages.find]
include = ["salmalm*"]

[tool.setuptools.package-data]
salmalm = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["plugins/", "scripts/", "memory/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
