[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salmalm"
version = "0.14.0"
description = "Personal AI Gateway — Pure Python, minimal dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Nightmare Dolsoe", email = "dolsoe@salmalm.dev"}]
keywords = ["ai", "gateway", "llm", "agent", "local", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
dev = ["mypy>=1.8", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.2", "pytest-cov>=5.0", "flake8>=7.0"]

[project.scripts]
salmalm = "salmalm.__main__:main"

[project.urls]
Homepage = "https://github.com/hyunjun6928-netizen/salmalm"
Repository = "https://github.com/hyunjun6928-netizen/salmalm"

[tool.setuptools.packages.find]
include = ["salmalm*"]

[tool.setuptools.package-data]
salmalm = ["py.typed", "default_skills/**/*.md", "static/*.html"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["plugins/", "scripts/", "memory/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503", "E402"]
exclude = ["plugins/", "scripts/", "memory/", ".git", "__pycache__"]
